# how-build-1st-claude-workflow

./: CHANGELOG.md  CLAUDE.md  README.md
skills/claude-personal-workflow-builder/: CHANGELOG.md  CLAUDE.md  README.md  SKILL.md
skills/claude-personal-workflow-builder/examples/: po-setup.md
skills/claude-personal-workflow-builder/guide/: 00-prerequisites.md  01-intro.md  04-rules.md  10-skill-absorption.md  12-iterate-grow.md
skills/claude-personal-workflow-builder/references/: agent-platform-mapping.md  engineering-workflows.md  knowledge-management-and-rag.md  prompt-framing.md
skills/pug-mockup/: CHANGELOG.md  CLAUDE.md  README.md  SKILL.md
skills/pug-mockup/examples/: README.md
skills/pug-mockup/examples/demo-project/: CLAUDE.md  demo.html  package.json
skills/pug-mockup/guide/: 0-nontech-workflow.md  1-pug-syntax.md  2-ideal-workflow.md  3-input-spec.md  4-convert-to-production.md  5-troubleshooting.md
skills/pug-mockup/template/: README.md
skills/pug-mockup/template/src/: index.pug
skills/pug-mockup/template/src/css/: README.md  (+1 more)
skills/sidekick-agent-mcp-setup/: CHANGELOG.md  CLAUDE.md  README.md  SKILL.md
skills/sidekick-agent-mcp-setup/docs/rules/: rule-sidekick-delegation.md
skills/sidekick-agent-mcp-setup/examples/: use-cases.md
skills/sidekick-agent-mcp-setup/guide/: setup-guide.md
skills/sidekick-agent-mcp-setup/mcp/: .env.example  LICENSE  pyproject.toml  requirements.txt  server.py
skills/sidekick-agent-mcp-setup/mcp/sidekick_agent/: agent_loop.py  agent_tools.py  audit.py  client.py  config.py  prompts.py  safety.py  server.py
(+23 files in other folders)
