[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sidekick-agent-mcp"
version = "0.1.0"
description = "MCP server that wraps an Anthropic-compatible LLM endpoint as junior-role tools, letting Claude shift tokens from the senior to a cheaper model under controlled scope + senior verification."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Lê Trương Duy Lam" }
]
keywords = ["mcp", "claude", "minimax", "agent", "llm", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=0.9",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/duylamle/product-collection/tree/main/skills/sidekick-agent-mcp-setup"
Issues = "https://github.com/duylamle/product-collection/issues"

[project.scripts]
sidekick-agent-mcp = "sidekick_agent.server:main"

[tool.setuptools.packages.find]
include = ["sidekick_agent*"]
exclude = ["tests*", "_logs*"]
